Error on List.on fixed