@@ -1,5 +1,6 @@
 package es.upm.miw.iwvg_devops.practice;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -7,34 +8,34 @@ public class UsersDatabase {
 
     public Stream<User> findAll() {
 
-        List<Fraction> fractions1 = List.of(
+        List<Fraction> fractions1 = Arrays.asList(
                 new Fraction(0, 1),
                 new Fraction(1, 1),
                 new Fraction(2, 1)
         );
-        List<Fraction> fractions2 = List.of(
+        List<Fraction> fractions2 = Arrays.asList(
                 new Fraction(2, 1),
                 new Fraction(-1, 5),
                 new Fraction(2, 4),
                 new Fraction(4, 3)
         );
-        List<Fraction> fractions3 = List.of(
+        List<Fraction> fractions3 = Arrays.asList(
                 new Fraction(1, 5),
                 new Fraction(3, -6),
                 new Fraction(1, 2),
                 new Fraction(4, 4)
         );
-        List<Fraction> fractions4 = List.of(
+        List<Fraction> fractions4 = Arrays.asList(
                 new Fraction(2, 2),
                 new Fraction(4, 4)
         );
-        List<Fraction> fractions5 = List.of(
+        List<Fraction> fractions5 = Arrays.asList(
                 new Fraction(0, 1),
                 new Fraction(0, -2),
                 new Fraction(0, 3)
         );
 
-        List<Fraction> fractions6 = List.of(
+        List<Fraction> fractions6 = Arrays.asList(
                 new Fraction(0, 0),
                 new Fraction(1, 0),
                 new Fraction(1, 1)
